--- a/settings.tex
+++ b/settings.tex
@@ -17,6 +17,9 @@
 	\textbf{Bearbeitungszeitraum:} & __INPUT[Datum]__ bis __INPUT[Datum]__\\
 }
 
+% Einfügen eines Sperrvermerkes:
+\sperrfalse % oder \sperrtrue
+
 % Anpassung der Pfade zu Bildern und Code
 %\renewcommand{\Imgpath}{../img/}
 %\renewcommand{\Codepath}{../code/}
