--- a/text/text.tex
+++ b/text/text.tex
@@ -5,7 +5,7 @@
 % \subsubsection{__INPUT__}
 
 % Einfügen von Bilder:
-% \begin{figure}[h!]
+% \begin{figure}[ht!]
 	% \centering
 	% \includegraphics[scale=__INPUT[0-1]__]{\Imgpath __INPUT[Dateiname]__}
 	% \caption{__INPUT[Bildunterschrift]__}
@@ -25,5 +25,4 @@
 % ~\footnote{__INPUT__}
 
 % Quellenverweis:
-% \citet[__INPUT[postnote]__]{__INPUT[key]__}
-% (am besten in Fußnote)
+% \autocite[__INPUT[prenote]__][__INPUT[postnote]__]{__INPUT[key]__}
