Remove -Sperrvermerk- from Titlepage when set to false

--- a/document/document.tex
+++ b/document/document.tex
@@ -140,7 +140,9 @@
 		\normalsize
 		\textbf{Studiengang Wirtschaftsinformatik}\\
 		\textbf{\small{Profil Softwareengineering}}\\
-		\textcolor{red}{\textbf{-Sperrvermerk-}}\\
+		\ifsperr
+			\textcolor{red}{\textbf{-Sperrvermerk-}}\\
+		\fi
 	\end{center}
 	\renewcommand{\arraystretch}{1.5}
 	\begin{table}[!b]
