--- a/settings.tex
+++ b/settings.tex
@@ -20,6 +20,10 @@
 % Einfügen eines Sperrvermerkes:
 \sperrfalse % oder \sperrtrue
 
+% Einfügen eines Glossars
+\glossaryfalse % oder \glossarytrue
+% \renewcommand{\Glossarypath}{../text/glossary.tex}
+
 % Anpassung der Pfade zu Bildern und Code
 %\renewcommand{\Imgpath}{../img/}
 %\renewcommand{\Codepath}{../code/}
