Renamed .bat, Added clean up

--- a/document/document.tex
+++ b/document/document.tex
@@ -31,6 +31,7 @@
 \usepackage{enumitem,lipsum}
 %\usepackage{mdwlist}
 \usepackage{eqlist}
+\usepackage{scrhack}
 \usepackage{listings}
 	\renewcommand{\ttdefault}{pcr}
 	\lstset{
