--- a/settings.tex
+++ b/settings.tex
@@ -20,6 +20,9 @@
 % Einfügen eines Sperrvermerkes:
 \sperrfalse % oder \sperrtrue
 
+% Römische Seitenzahlen von und nach Text
+\romanfalse % oder \romantrue
+
 % Einfügen eines Glossars
 \glossaryfalse % oder \glossarytrue
 % \renewcommand{\Glossarypath}{../text/glossary.tex}
