--- a/settings-template.tex
+++ b/settings-template.tex
@@ -25,11 +25,13 @@
 
 % Einfügen eines Glossars
 \glossaryfalse % oder \glossarytrue
-% \renewcommand{\Glossarypath}{../text/glossary.tex}
 
-% Anpassung der Pfade zu Bildern und Code
+% Anpassung der Pfade
+%\renewcommand{\Abstractpath}{../text/abstract.tex}
+%\renewcommand{\Textpath}{../text/text.tex}
 %\renewcommand{\Imgpath}{../img/}
 %\renewcommand{\Codepath}{../code/}
+%\renewcommand{\Glossarypath}{../text/glossary.tex}
 
 % Mit hyphenation können die Regeln für die Silbentrennung überschrieben werden
 % Der Input ist dazu eine mit Leerzeichen getrennte Liste
