Changed font to lmodern and font-encoding to 8bit

--- a/document/document.tex
+++ b/document/document.tex
@@ -10,8 +10,10 @@
 \newcommand{\Glossarypath}{../text/glossary.tex}
 \input{../settings.tex}
 
+\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
+\usepackage{lmodern}
 \usepackage{eurosym}
 \usepackage{graphicx}
 \usepackage{xcolor}
@@ -22,7 +24,6 @@
 	\definecolor{jskeypink}{HTML}{7F0055}
 	\definecolor{commentblue}{HTML}{3F5FBF}
 	\definecolor{numberblue}{HTML}{33A1DE}
-% \usepackage{mathpazo} %Schriftart
 \usepackage[hyphens]{url}
 \usepackage[strict]{csquotes}
 \usepackage[style=authortitle,backend=biber]{biblatex}
