--- a/settings-template.tex
+++ b/settings-template.tex
@@ -33,6 +33,10 @@
 %\renewcommand{\Codepath}{../code/}
 %\renewcommand{\Glossarypath}{../text/glossary.tex}
 
+% Zitierstil ändern
+%\renewcommand{\Bibstyle}{style=alphabetic}
+%\renewcommand{\Bibstyle}{bibstyle=verbose,citestyle=verbose-trad2}
+
 % Mit hyphenation können die Regeln für die Silbentrennung überschrieben werden
 % Der Input ist dazu eine mit Leerzeichen getrennte Liste
 % (Das funktioniert aber nicht für Wörter mit Umlauten)
