Removed tex-Commands from Readme Removed example bib bib-path as parameter (same default)

--- a/document/document.tex
+++ b/document/document.tex
@@ -8,6 +8,7 @@
 \newcommand{\Imgpath}{../img/}
 \newcommand{\Codepath}{../code/}
 \newcommand{\Glossarypath}{../text/glossary.tex}
+\newcommand{\Bibpath}{../bib/Quellen.bib}
 \newcommand{\Bibstyle}{style=authortitle}
 \input{../settings.tex}
 
@@ -28,7 +29,7 @@
 \usepackage[hyphens]{url}
 \usepackage[strict]{csquotes}
 \usepackage[backend=biber,\Bibstyle]{biblatex}
-	\addbibresource{../bib/Quellen.bib}
+	\addbibresource{\Bibpath}
 \usepackage{setspace}
 	\linespread{1.5}
 \usepackage{accsupp}
