--- a/settings-template.tex
+++ b/settings-template.tex
@@ -32,12 +32,8 @@
 %\renewcommand{\Imgpath}{../img/}
 %\renewcommand{\Codepath}{../code/}
 %\renewcommand{\Glossarypath}{../text/glossary.tex}
+%\renewcommand{\Bibpath}{../bib/Quellen.bib}
 
 % Zitierstil ändern
-%\renewcommand{\Bibstyle}{style=alphabetic}
+%\renewcommand{\Bibstyle}{style=alphabetic} % oder
 %\renewcommand{\Bibstyle}{bibstyle=verbose,citestyle=verbose-trad2}
-
-% Mit hyphenation können die Regeln für die Silbentrennung überschrieben werden
-% Der Input ist dazu eine mit Leerzeichen getrennte Liste
-% (Das funktioniert aber nicht für Wörter mit Umlauten)
-%\hyphenation{__INPUT__}
