Fixed bug for optional Glossaries-file

--- a/document/document.tex
+++ b/document/document.tex
@@ -122,7 +122,9 @@
 \usepackage{scrhack}
 \ifglossary
 	\usepackage[toc,nonumberlist,translate=babel,acronym]{glossaries}
-		\InputIfFileExists{\Glossarypath}{}
+		\IfFileExists{\Glossarypath}{
+			\input{\Glossarypath}
+		}{}
 		\makeglossaries
 \fi
 
